# MI-CONTEXTO-DE-COMPA-A-dragcessa1998

./: .gitignore  AGENTS.md  README.es.md  README.md  RUN.md  application.html  company-choice.md  index.html  package-lock.json  package.json  tsconfig.json  validation.js
.agents/rules/: monorepo-conventions.md
.agents/skills/scaffold-ui-app/: SKILL.md
docs/guia/: README.md  build.py  template.html
docs/guia/src/: 00-prefacio.md  01-que-es.md  02-conceptos.md  03-entorno.md  04-hito01.md  05-hito2.md  06-hito3.md  07-hito4.md  08-talent-api.md  09-supplier.md  10-operar.md  11-arquitectura.md  12-calidad.md  13-entrega.md  apA-comandos.md  apB-glosario.md  apC-mapa.md
memory-bank/: progress.md  projectbrief.md  techContext.md
services/api/: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  seed.py
services/api/routes/: suppliers.py
services/talent-api/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
services/talent-api/src/: index.ts  store.ts
src/: demo.ts
src/data/: sampleData.ts
src/types/: models.ts
src/utils/: collections.ts  search.ts  transformations.ts  validations.ts
uis/backoffice/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
uis/backoffice/src/app/: layout.tsx  page.tsx
uis/backoffice/src/components/: AddCandidateForm.tsx  AddSupplierForm.tsx  ApiErrorState.tsx  (+6 more)
uis/talent-pipeline-tracker/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
uis/website/: README.md  package-lock.json  package.json
(+34 files in other folders)
