[project]
name = "nexova-supplier-api"
version = "1.0.0"
description = "Supplier Directory de Nexova — Lightweight Storage API (FastAPI + TinyDB + Pydantic)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "tinydb>=4.8",
    "pydantic>=2.9",
]

[project.scripts]
seed = "seed:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "models", "database", "seed"]
packages = ["routes"]
